--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "test-ci": "ng test --watch=false --browsers=ChromeHeadless",
+    "test-ci": "xvfb-run ng test --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -42,6 +42,7 @@
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
