Jacoco ne montre que les bonnes classes dans le rapport coverage maintenant.

--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -55,6 +55,12 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.3</version>
+                <configuration>
+                    <excludes>
+                        <exclude>rennesgo/auth/*</exclude>
+                        <exclude>rennesgo/RennesGo.class</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <id>pre-unit-test</id>
