--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
     front_1:
         container_name: ${COMPOSE_PROJECT_NAME}_front_1
-        image: rennesgo-front:latest
+        image: rennesgo-frontend:latest
         expose:
             - ${FRONT_EXPOSED_PORT}
         networks:
@@ -11,7 +11,7 @@ services:
                 ipv4_address: ${FRONT_1_IP}
     front_2:
         container_name: ${COMPOSE_PROJECT_NAME}_front_2
-        image: rennesgo-front:latest
+        image: rennesgo-frontend:latest
         expose:
             - ${FRONT_EXPOSED_PORT}
         networks:
@@ -19,7 +19,7 @@ services:
                 ipv4_address: ${FRONT_2_IP}
     back_1:
         container_name: ${COMPOSE_PROJECT_NAME}_back_1
-        image: rennesgo-back:latest
+        image: rennesgo-backend:latest
         expose:
             - ${BACK_EXPOSED_PORT}
         networks:
@@ -27,7 +27,7 @@ services:
                 ipv4_address: ${BACK_1_IP}
     back_2:
         container_name: ${COMPOSE_PROJECT_NAME}_back_2
-        image: rennesgo-back:latest
+        image: rennesgo-backend:latest
         expose:
             - ${BACK_EXPOSED_PORT}
         networks:
@@ -37,7 +37,7 @@ services:
         container_name: ${COMPOSE_PROJECT_NAME}_proxy
         image: rennesgo-proxy:latest
         ports:
-            - 80:80
+            - 8083:80
         expose:
             - 80
         networks:
