--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -28,7 +28,7 @@ backend api
     stats auth admin:admin
     stats uri /haproxy?stats
     balance source
-    option httpchk
+    option httpchk GET /
     option forwardfor
     option http-server-close
     server back1 ${BACK_1_IP}:${BACK_EXPOSED_PORT} check
@@ -39,7 +39,7 @@ backend static
     stats auth admin:admin
     stats uri /haproxy?stats
     balance roundrobin
-    option httpchk
+    option httpchk GET /
     option forwardfor
     option http-server-close
     server front1 ${FRONT_1_IP}:${FRONT_EXPOSED_PORT} check
