--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -28,7 +28,7 @@ backend api
     stats auth admin:admin
     stats uri /haproxy?stats
     balance source
-    option httpchk GET /
+    option httpchk GET /go/logout
     option forwardfor
     option http-server-close
     server back1 ${BACK_1_IP}:${BACK_EXPOSED_PORT} check
